@@ -1,8 +1,10 @@
 Revision history for Petal.
 
 0.7
-	- Added test
+	- Added tests
+	- Fixed entity bug due to XML::Parser expanding entities
 	- Fixed method parameters bug
+	- Fixed another method parameters bug
  
 0.61 Mon Aug 12 11:50:50 2002
 	- Added test
